# rgb-lib-bare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.cc  index.js  package.json  rgblib.h
.github/workflows/: release.yml
scripts/: build-ios.sh  build-prebuilds.sh  download-libs.sh
